--- a/compose.yaml
+++ b/compose.yaml
@@ -13,7 +13,7 @@ services:
     #  - "8081:80"
     volumes:
       - ./web1:/usr/share/nginx/html
-      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./default_1.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - webnet
   web2:
@@ -22,7 +22,7 @@ services:
     #  - "8082:80"
     volumes:
       - ./web2:/usr/share/nginx/html
-      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./default_2.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
       - webnet
 
