--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,14 @@ events {
     worker_connections  1024;
 }
 
+
+		# uses Round Robin by default
+		# ip_hash;
+		# weight=5
+		# max_fails=0
+
 http {
-    upstream myapp1 {
+    upstream myapp1 { 
         server web1:8081 max_fails=0;
         server web2:8082 max_fails=0;
     }
@@ -20,6 +26,7 @@ http {
 
         location / {
             proxy_pass http://myapp1;
+			expires 1s;
         }
     }
 }
